Fix movie modal bottom gap spacing

--- a/src/app/movieModal/modal.component.less
+++ b/src/app/movieModal/modal.component.less
@@ -40,7 +40,6 @@ jw-modal {
             display: flex;
             /* margin exposes part of the modal background */
             margin: 160px 200px;    
-            background-color: white;
             background-color: rgb(36, 36, 36);
 
             @media @xxxlarge {
@@ -103,6 +102,38 @@ jw-modal {
                 width: 45%;
                 background-color: #0a0a0a;
 
+                @media @xxxlarge {
+                    height: 661px; 
+                }
+    
+                @media @xxlarge {
+                    height: 614px; 
+                }
+    
+                @media @xlarge {
+                    height: 573px; 
+                }
+    
+                @media @large {
+                    height: 540px; 
+                }
+    
+                @media @full {
+                    height: 492px; 
+                }
+    
+                @media @medium {
+                    height: 438px; 
+                }
+    
+                @media @tablet {
+                    height: 391px; 
+                }
+    
+                @media @small {
+                    height: 337px;           
+                }
+
                 img{
                     width:100%;
                 }
@@ -110,7 +141,6 @@ jw-modal {
 
             .desc-wrapper {
                 width: 55%;
-                border-bottom: 4px solid #0a0a0a;
                 background-color: #dadada;
                 position: relative;
 
